# lxradio

./: .gitignore  AGENTS 2.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO 2.md  TODO.md  fix_editable_install.py  pyproject.toml  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2025-05-25-sleep-timer.md
docs/superpowers/specs/: 2025-05-25-sleep-timer-design.md
src/lxradio/: __init__.py  __main__.py  app.py  favorites.py  history.py  key_dispatcher.py  player.py  radio_browser.py  renderer.py  sleep_timer.py
tests/: test_app.py  test_favorites.py  test_history.py  test_main.py  test_player.py  test_radio_browser.py  test_renderer.py  test_sleep_timer.py
